﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:
		TODO: Important change: The license is changed from LGPL to MIT.
		
	Bug Fixes:
		-StackOverflowException was thrown when self-referencing collections were supplied for work item 10509.
		 When building an exception message, the library uses the supplied parameters of the validation
		 methods. The parameter was transformed to a string representation, which uses recursive calls to 
		 transform collections to it's string representation. Supplying a collection that referenced itself
		 caused a StackOverflowException. This method now checks it's recursive depth to prevent such an
		 exception.
		-Behavior of Contains, ContainsAll, and ContainsAny overloads changed for work item 10480.
		 The overloads of the Contains, ContainsAll, and ContainsAny methods for collections had inconsistent
		 behavior. While some overloads used the ICollection<T>.Contains or IList.Contains method of the
		 validated collection, others iterated the collection itself to determine whether a
		 collection contained the specified value. This resulted in different behavior on some collections
		 that did not use default equality. The behavior is now fixed, but it comes with some costs. Using
		 those methods on ordered sets (like HashSet<T> and SortedList<T>) is now slower than before.
		-The internal CollectionHelper class had a dependency on the .NET 3.5 type HashSet<T>. This dependency
		 is removed and it's now more likely that CuttingEdge.Conditions can be used in .NET 2.0 projects.
		 You'd still need C# 3.0 though. The library has now only one method that you can not call without
		 .NET 3.5 installed: the Evaluate(Expression<Func<T, bool>>) method.
		
	Code changes:
		-[BREAKING CHANGE] Change extensibility of ConditionValidator<T> for work item 10543.
		 Removed the ConditionValidator<T>.BuildException method overloads and renamed the Throw method